--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel -d ./build ./server",
+    "build": "./node_modules/.bin/babel -d ./build ./server",
     "prebuild": "rm -rf build/*",
-    "start": "NODE_ENV=production node .build/index.js",
+    "start": "NODE_ENV=production node ./build/index.js",
     "prestart": "npm run build",
     "dev": "babel-node ./server/index.js"
   },
@@ -21,6 +21,7 @@
     "request": "^2.72.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
