--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "rm -rf build/*",
     "heroku-postbuild": "npm run build",
     "start": "NODE_ENV=production node ./build/index.js",
-    "dev": "babel-node ./server/index.js"
+    "dev": "nodemon --exec babel-node ./server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.9",
     "prettier": "1.16.1"
   }
 }
