--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "prebuild": "rm -rf build/*",
     "heroku-postbuild": "npm run build",
     "start": "NODE_ENV=production node ./build/index.js",
-    "dev": "nodemon --exec babel-node ./server/index.js"
+    "dev": "nodemon --exec babel-node ./server/index.js",
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
+    "discord.js": "^11.5.1",
+    "dotenv": "^8.1.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "express-promise-router": "^3.0.3",
@@ -30,9 +34,11 @@
     "eslint-config-prettier": "4.0.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.18.9",
     "prettier": "1.16.1"
   }
